app/assets/styles/core/_rtl.scss
.lang--rtl {

  body {
    direction: rtl;
    text-align: right;
  }

  .browse-menu > li {
    @include media(medium-up) {
      float: right;
      margin: 0 0 0 1.5rem;
    }
  }

  .page__headline {
    float: right;
    padding-right: 0;
  }

  .page__title {
    box-shadow: inset 1px 0 0 $tertiary-color;
    padding-left: $global-spacing;
    height: 100%;
  }

  .inpage {

    &__headline-actions {
      float: left;
      width: auto;
    @include media(small-down){
      width: 100%;
      }
      li {
        @include media(small-down){
          float: right;
          &:last-child {
            margin-right: $global-spacing/2;
          };
        }
      }
    }

    &__title {
      float: right;
      margin-right: 0;
    }

    &-meta__value {
      float: right;
      &--status {
        margin-right: 0rem;
        box-shadow: -1px 0 0 #2B2342;
        &:before {
          right: 0;
        };
      }
      &--type {
        box-shadow: -1px 0 0 #2B2342;
        margin-right: 0rem;
        margin-left: 1rem;
        padding-left: $global-spacing;
        padding-right: 0;
      }
    }
    &-meta__label {
      float: right;
      margin-left: $global-spacing/2;
    }
    &-stats li {
      float: right;
      box-shadow: -1px 0 0 #E9E9E9;
      margin-right: 0;
      padding-left: 1rem;
      margin-left: 1rem;
      padding-right: 0;
      &:last-child {
        box-shadow: none;
      };
      @include media(medium-up) {
        padding-left: 4rem;
        padding-right: 0;
        margin-right: 0;
      }
    }
    &-stats {
      .num__internal li {
        box-shadow: none;
        padding-left: 0;
      }
    }
    &__table {
      th {
      text-align: right
      }
      td {
        padding-right: 0;
        padding-left: $global-spacing * 2;
      }
    }
    &__section {
    &--title-aligned {
      text-align: right;
      float: right;
     }
    }

    &__col--map {
      float: left;
    }

    &__col--content {
      float: right;
      padding: 3rem 2rem 3rem 2rem;
    }
    &__body--alt p {
      float: right;
      margin-right: 0;
      width: 100%;
    }
    &__header-data{
      .inpage-stats li {
        padding-left: 2rem;
        &:last-child {
          padding-right: 2rem;
        };
      }
    }
  }

  .overview-charts {
    .chart__inline--labels {
      float: right;
    }
  }

  .inpage__body--alt section {
    float: right;
  }

  .inpage__table td:nth-of-type(n):before {
    right: 0;
    text-align: right;
  }

  .inpage__section--overview {
    .inpage__col--content {
      @include media(medium-up){
        float: right;
      }
      @include media(small-down) {
        padding: 2rem;
      }
    }

    .inpage__col--map {
      @include media(medium-up){
        float: left;
        margin-right: 0;
      }
    }
  }

  .heading--deco::after {
    right: 0;
  }
  .heading--deco-small::after {
    right: 0;
  }

  .inpage__overview-links {
    .overview-item {
      float: right;
      margin-right: 0;
    }
    .overview-item:nth-of-type(2) {
      float: left;
      margin-left: 0;
    }
    .overview-item:nth-of-type(3) {
      float: right;
      margin-left: 3%;
    }
    li {
      @include media (medium-up) {
        margin-right: 0;
      }
    }
  }

  .inpage__overview-links li a {
    float: right;
    clear: right;
  }

  /*FOOTER*/

  .page__footer {
    .updates {
      @include media(medium-up) {
        float: right;
        margin-right: 0;
      }

    .form__input-group {
      float: right;
      }
    }

    .form__input-group-button:last-child > .button {
      border-top-right-radius: 0;
      border-bottom-right-radius: 0;
      border-top-left-radius: $base-border-radius;
      border-bottom-left-radius: $base-border-radius;
    }

    .form__input-group .form__control:first-child {
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
      border-top-right-radius: $base-border-radius;
      border-bottom-right-radius: $base-border-radius;
    }

    .logos {
      @include media(medium-down) {
        clear: right;
        float: right;
      }
    }
    .logos__list li  {
      float: left;
    }
  }

  /*CARDS*/

  .card-body {
    p {
      float: right;
    }
  }

  .card__subtitle {
    font-size: 1.05em;
  }

  .inpage__section--bleed {
    .projects-list__card {
      @include media(medium-up) {
        float: right;
        padding: ($global-spacing * 2) 0 ($global-spacing * 2) ($global-spacing * 2);
        margin-left: 3%;
        margin-right: 0%;
        &:nth-of-type(3n) {
          margin-left: 0;
        }
      }
      @include media(medium-list-down) {
        float: right;
        margin-left: 1.5%;
        margin-right: 0%;
      }
      @include media(small-down) {
        float: right;
      }
      @include media(xsmall-only) {
        float: right;
      }
    }
  }

  .inpage__section .projects-list__card {

    @include media(medium-up) {
      float: right;
      padding: ($global-spacing * 2) 0 ($global-spacing * 2) ($global-spacing * 2);
      margin-left: 2%;
      margin-right: 0%;
      &:nth-of-type(3n) {
        margin-left: 0;
      }
    }
    @include media(medium-list-down) {
      float: right;
      margin-left: 1.5%;
      margin-right: 0%;
    }
    @include media(small-down) {
      float: right;
    }
    @include media(xsmall-only) {
      float: right;
    }
  }

  .card-meta__value--status {
    margin-left: 1rem;
    padding-right: 0.75rem;
    margin-right: 0.75rem;
    padding-left: 0;
  }

  .card-meta__value--status:before {
    right: 0;
  }

  .card-meta {
    &__value {
      float: right;
    }
  }

  .card-cmplt > li > span {
    right: 100%;
    left: 0;
    margin-right: $global-spacing/2;
    margin-left: 0;
  }

  .card-stats li {
    float: right;
    box-shadow: -1px 0 0 $tertiary-color;
    padding-left: 1rem;
    margin-left: 1rem;
    padding-right: 0rem;
    margin-right: 0rem;
    &:last-child {
      box-shadow: none;
    };
  }

  .inpage__section--related .related-projects-card {
    float: right;
    padding: 2rem 0 2rem 2rem;
  }

  /*homepage specific */

.inpage__description {
    float: right;
    margin-right: 0;
    margin-left: 3%;
  }

.category-stats {
    box-shadow: inset 0 -1px 0 0 $tertiary-color;
    padding-top: $global-spacing;
    width: 100%;
    @include media(medium-up) {
      padding-top: 0;
      box-shadow: inset -1px 0 0 $tertiary-color;
    }
    .category-stats__item {
      float: right;
      border-left: 1px solid $tertiary-color;
      border-right: 0;
      &:last-of-type {
        border-left: 0;
        padding-left: 0;
        padding-right: 1.4em;
        margin-right: 3%;
      }
      @include media(medium-down) {
        &:nth-of-type(2) {
          border-left: 0;
        }
        &:last-of-type {
          margin-right: 0;
        }
      }
      @include media(small-down){
        border: unset;
      }
    }
    &:last-child {
      box-shadow: none;
    }
  }

  .section__footer li {
    margin-left: 1rem;
    margin-right: 0;
    &:last-child {
      margin-left: 0;
    }
  }

  /*project browse*/
  .actions-filters {
    float: right;
    margin-right: 0;
    .button--list > li:first-child {
      margin-right: 0;
    }
  }

  .filters {
    float: right;
  }

  .react-autosuggest__input {
    padding-right: 3rem;
  }

  .button--list li{
    float: right;
    &:first-child {
      margin-left: $global-spacing;
      margin-right: 0;
      @include media(medium-up) {
       margin-left: 1rem;
       margin-right: 0;
     }
    }
  }

  .section__header {
    .sort {
      float: left;
    }
    .section__title {
      float: right;
    }
  }

  .actions-toggle {
    width: auto;
    .button--toggle {
      float: right;
    }
    @include media(small-down){
      float: right;
    }
  }

  .react-autosuggest__input {
    font-size: 1rem;
  }

  /*general styles */
  .drop__toggle--caret:after {
    padding-right: $global-spacing/4;
  }
  .drop--align-right {
    @include media(medium-up) {
      right: auto;
      left: 0;
    }
  }
  .modal__button-dismiss {
    right: auto;
    left: 1rem;
    top: 1rem;
  }
  .modal {
    .inpage__title {
      width: auto;
    }
  }
  .modal__filters .form__fieldset {
    float: right;
    padding-top: 2rem;
    margin-right: 0;
    margin-left: $global-spacing * 2;
    max-width: 530px;
  }
  .modal__filters--defaults {
    .form__option--custom-checkbox {
      float: right;
    }
    a {
      float: right;
    }

  }
  .modal__indicators .indicators {
    float: right;
    li {
      border-right-width: 0px;
      border-left-width: 1px;
      text-align: right;
    }
    .list__item--active {
      border-left: 0;
    }
  }
  .modal__instructions p{
    float: right;
  }
  .indicators--selected {
    .button--tag {
      float: right;
      &:after {
        margin-top: .5em;
        float: left;
        margin-right: $global-spacing/2;
        margin-left: 0;
      }
    }
    .heading--label {
      float: right;
      margin-top: .5em;
    }
  }
  .share--box {
    .form__label {
      position: relative;
    }
  }
  .form__label {
    float: right;
    position: absolute;
    right: 0;
    top: 0rem;
  }
  .form__option__ui {
    right: 0;
    left: auto;
  }
  .form__option__text {
    padding-right: 1.5rem;
    text-align: right;
    margin-right: 6px;
  }
  .form__input-group {
    float: right;
  }
  .form__input-group-button:last-child > .button {
    border-top-right-radius: $global-spacing/4;
    border-bottom-right-radius: $global-spacing/4;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  .heading--label {
    margin-left: $global-spacing/2;
    font-size: .65em;
  }

  .button--download:after {
    margin-right: 0.5rem;
    margin-left: 0;
  }
  /*project page */
  .tags-group {
    float: right;
  }
  .tags__label {
    float: right;
  }
  .axis__bottom .chart__axis-ticks{
    direction: rtl;
  }
  .chart__axis-ticks {
    direction: ltr;
    font-size: .9em;
  }
  .status-key {
    transform: translate(0%, 0);
    .status-key__label {
      font-size: 1em;
      &:before {
        left: 0;
        right: -1.3rem;

      }
    }
  }
  .marker-cluster div {
    margin-left: 0;
    margin-right: 5px
  }
  .timeline__headline, .timeline__row {
    float: right;
    margin-right: 0;
  }
  .legend__item {
    float: right;
  }
  .legend__image--cluster {
    margin-right: 0;
    margin-left: 0.5em;
  }
  .legend__marker--cluster{
    &:first-child {
      margin-top: 0.2rem;
    };
  }

  .indicator-list-container .chart-container:last-child {
    margin-right: 5rem;
  }

  .indicator-list {
    .section__title {
      float: none;
    }
  }

  .indicator-list-container {
  .chart-container {
    float: right;
    @include media(medium-up) {
      float: right;
      margin-left: 0;
      margin-top: 5rem;
    }
  }
  .indicator__overlay {
    left: 0;
    @include media(medium-up) {
      float: right;
    }
  }
}
/* map */
.legend--cluster{
  margin-right: unset;
  margin-left: .6em;
}
}

.legend__item--overlay--bg {
  margin-right: 0;
  margin-left: .5em;
}

.legend__label--cluster:before {
  margin-left: 0.6em;
  margin-right: 0;
  padding-left: 0;
  padding-right: 0.37rem;
}

.form__option__info {
  margin-left: 0;
  margin-right: .6em;
}

.drop__menu {
  .drop__menu-item {
    width: 100%;
    direction: rtl;
    text-align: right;
    &:after {
      margin-right: 0.5rem;
    }
    &:hover {
      width: 100%;
      direction: rtl;
      text-align: right;
    }
  }
}

